Monthly and last week works now, takes daily average, doesnt take id into account though
