# server/Application/Interfaces/Infrastructure.Postgres/IWeatherStationRepository.cs
@@ -1,3 +1,4 @@
+using Application.Models.Dtos.RestDtos;
 using Core.Domain.Entities;
 
 namespace Application.Interfaces.Infrastructure.Postgres;
@@ -7,4 +8,6 @@ public interface IWeatherStationRepository
     List<Devicelog> GetRecentLogs();
     Devicelog AddDeviceLog(Devicelog deviceLog);
     Task DeleteAllData();
+    List<AggregatedLogDto> GetDailyAverages(TimeRangeDto timeRangeDto);
+
 }
