# server/Application/Models/Dtos/RestDtos/TimeRangeDto.cs
@@ -1,0 +1,7 @@
+﻿namespace Application.Models.Dtos.RestDtos;
+
+public class TimeRangeDto
+{
+    public DateTime StartDate { get; set; }
+    public DateTime EndDate { get; set; }
+}
