# server/Infrastructure.Postgres/Postgresql.Data/WeatherStationRepository.cs
@@ -1,6 +1,8 @@
 using Application.Interfaces.Infrastructure.Postgres;
+using Application.Models.Dtos.RestDtos;
 using Core.Domain.Entities;
 using Infrastructure.Postgres.Scaffolding;
+using Microsoft.EntityFrameworkCore;
 
 namespace Infrastructure.Postgres.Postgresql.Data;
 
@@ -24,4 +26,28 @@ public class WeatherStationRepository(MyDbContext ctx) : IWeatherStationReposito
         ctx.RemoveRange(allDataLogs);
         await ctx.SaveChangesAsync();
     }
+    
+    
+    public List<AggregatedLogDto> GetDailyAverages(TimeRangeDto dto)
+    {
+        var from = dto.StartDate.ToUniversalTime();
+        var to = dto.EndDate.ToUniversalTime();
+    
+        return ctx.Devicelogs
+            .Where(x => x.Timestamp >= from && x.Timestamp <= to)
+            .AsEnumerable()
+            .GroupBy(x => x.Timestamp.Date)
+            .Select(g => new AggregatedLogDto {
+                Date = g.Key,
+                AvgTemperature = g.Average(x => x.Temperature),
+                AvgHumidity = g.Average(x => x.Humidity),
+                AvgPressure = g.Average(x => x.Pressure),
+                AvgAirQuality = g.Average(x => x.Airquality)
+            }).ToList();
+    }
+
+
+
+
+    
 }
